# meduzzza

./: .gitignore  CMakeLists.txt
qss/: meduzzza.qss
sources/: CMakeLists.txt
sources/application/: CMakeLists.txt
sources/application/src/: dbengine.cpp  dbengine.h  dbupdater.cpp  dbupdater.h  main.cpp  manager.cpp  manager.h  meduzzzaevent.h  settings.cpp  settings.h  statist.cpp  statist.h
sources/clamavqtengine/: CMakeLists.txt
sources/clamavqtengine/src/: clamavengine.cpp  clamavengine.h  dirscanner.cpp  dirscanner.h  filescanner.cpp  filescanner.h  memdumper.cpp  memdumper.h  memscanner.cpp  memscanner.h  procscanner.cpp  procscanner.h  scanevent.cpp  scanevent.h  scanner.cpp  scanner.h
sources/gui/: CMakeLists.txt
sources/gui/qrc/: meduzzza.qrc
sources/gui/qss/: meduzzza.qss
sources/gui/src/: dirscanwidget.cpp  dirscanwidget.h  main.cpp  mainmenuitem.h  mainmenumodel.cpp  mainmenumodel.h  mainwindow.cpp  mainwindow.h  meduzzza.cpp  meduzzza.h  meduzzzacommonwidget.cpp  meduzzzacommonwidget.h  meduzzzascanmodel.cpp  meduzzzascanmodel.h  memscanwidget.cpp  memscanwidget.h  scanresdialog.cpp  scanresdialog.h  scanreswidget.cpp  scanreswidget.h  scanwidget.cpp  scanwidget.h  setupwidget.cpp  setupwidget.h  updatemodel.cpp  updatemodel.h  updatewidget.cpp  updatewidget.h
sources/gui/ui/: dirscanwidget.ui  mainwindow.ui  meduzzza.ui  meduzzzacommonwidget.ui  memscanwidget.ui  scanresdialog.ui  scanreswidget.ui  scanwidget.ui  setupwidget.ui  updatewidget.ui  updatewidgetitem.ui
