
project(${MEDUZZZA_APP_BIN})

find_package(Qt5Core REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5Network REQUIRED)

set(CMAKE_AUTOMOC ON)

file(GLOB SOURCE_LIB src/*.cpp EXCLUDE main.cpp)
file(GLOB SOURCE_LIB src/*.cpp)
file(GLOB SOURCE_BIN src/main.cpp)

INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Sql_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})
ADD_DEFINITIONS(${QT_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")

LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${MEDUZZZA_ENG_SRC_DIR})

add_library(${MEDUZZZA_APP_LIB} STATIC ${SOURCE_LIB})
add_executable(${MEDUZZZA_APP_BIN} ${SOURCE_BIN})
target_link_libraries(${MEDUZZZA_APP_BIN} ${MEDUZZZA_APP_LIB} ${MEDUZZZA_ENG_LIB} ${Qt5Core_LIBRARIES} ${Qt5Sql_LIBRARIES} ${Qt5Network_LIBRARIES})

INSTALL(TARGETS ${MEDUZZZA_APP_BIN} ${MEDUZZZA_APP_LIB}
	ARCHIVE DESTINATION lib
	RUNTIME DESTINATION bin)
INSTALL(FILES ${HEADER_LIB} 
	DESTINATION include)
