
project(${MEDUZZZA_ENG_LIB})

find_package(Qt5Core REQUIRED)

set(CMAKE_AUTOMOC ON)

file(GLOB SOURCE_LIB src/*.cpp)
file(GLOB HEADER_LIB src/*.h)


# QT5_WRAP_CPP(HEADERS_MOC ${HEADER_LIB})

INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
ADD_DEFINITIONS(${QT_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")

add_library(${MEDUZZZA_ENG_LIB} SHARED ${SOURCE_LIB})

target_link_libraries(${MEDUZZZA_ENG_LIB} clamav)

set_target_properties(${MEDUZZZA_ENG_LIB} PROPERTIES
	  VERSION 1.0.0
	  SOVERSION 1.0
	)

INSTALL(TARGETS ${MEDUZZZA_ENG_LIB}
	LIBRARY DESTINATION lib)

# INSTALL(TARGETS ${HEADER_LIB} 
# 	DESTINATION include)
