
project(${MEDUZZZA_GUI_BIN})

find_package(Qt5Widgets REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5Network REQUIRED)

set(CMAKE_AUTOMOC ON)

file(GLOB SOURCE src/*.cpp)
file(GLOB HEADER src/*.h)
file(GLOB UI ui/*.ui)
file(GLOB QRC qrc/*.qrc)

QT5_WRAP_UI(UIS ${UI})
QT5_ADD_RESOURCES(QRCS ${QRC})

# SET(QT_USE_QTSQL TRUE)
# SET(QT_USE_QTNETWORK TRUE)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Sql_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})

ADD_DEFINITIONS(${QT_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")

LINK_DIRECTORIES(/usr/local/lib)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(/usr/local/include)

add_executable(${MEDUZZZA_GUI_BIN} ${SOURCE} ${UIS} ${QRCS})
target_link_libraries(${MEDUZZZA_GUI_BIN} ${MEDUZZZA_APP_LIB} ${MEDUZZZA_ENG_LIB} ${Qt5Widgets_LIBRARIES} ${Qt5Sql_LIBRARIES} ${Qt5Network_LIBRARIES})

INSTALL(TARGETS ${MEDUZZZA_GUI_BIN}
	RUNTIME DESTINATION bin)
