
project(${MEDUZZZA_GUI_BIN})

find_package(Qt5Widgets REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5Network REQUIRED)

set(CMAKE_AUTOMOC ON)

file(GLOB SOURCE src/*.cpp)
file(GLOB HEADER src/*.h)
file(GLOB UI ui/*.ui)
file(GLOB QRC qrc/*.qrc)

QT5_WRAP_UI(UIS ${UI})
QT5_ADD_RESOURCES(QRCS ${QRC})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${MEDUZZZA_ENG_SRC_DIR} ${MEDUZZZA_APP_SRC_DIR})

add_executable(${MEDUZZZA_GUI_BIN} ${SOURCE} ${UIS} ${QRCS})
set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS ${CLAMAV_LIBS})
target_link_libraries(${MEDUZZZA_GUI_BIN} ${MEDUZZZA_APP_LIB} ${MEDUZZZA_ENG_LIB})
qt5_use_modules(${PROJECT_NAME} Widgets Gui Sql)